Update home text

--- a/app/views/pages/home.html.slim
+++ b/app/views/pages/home.html.slim
@@ -16,13 +16,13 @@ article class='post' role='article' itemscope='' itemtype='http://schema.org/Art
 
 article class='post tag-format-tag' role='article' itemscope='' itemtype='http://schema.org/Article'
   div class='post-content' itemprop='articleBody'
-    | I'm available to help build your products!
+    | Ben is available to help build your products!
     hr
     = link_to 'Contact Me Now', page_path('contact-me'), class: 'button large'
 
 article class='post' role='article' itemscope='' itemtype='http://schema.org/Article'
   div class='post-content' itemprop='articleBody'
-    | I work with several popular programming languages and frameworks:
+    | He works with several popular programming languages and frameworks:
     ul
       li Ruby / Ruby on Rails / Sinatra
       li Python / Django / Flask
