--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -6,11 +6,20 @@
   figure
      margin: 0
 
-/* fluid 5 columns */
+// fluid 3 columns sizing
+// weird percentages to force full 3 column width:
+// https://metafizzy.co/blog/beyonce-seamless-fluid-image-masonry/
 .grid-sizer,
 .grid-item
-  width: 33.33%
+  width: 33.2%
+  img
+    width: 100.5%
 
-/* 2 columns wide */
-.grid-item--width2
-  width: 40%
+// reveal grid after images loaded, otherwise we may see images
+// stacked on top of each other for a moment as page loads
+.grid.are-images-unloaded
+  opacity: 0
+
+  // hide by default
+  .image.grid_item
+    opacity: 0
