Update meta description and title

--- a/app/views/photography/index.html.slim
+++ b/app/views/photography/index.html.slim
@@ -1,5 +1,5 @@
-- set_meta_tags title: 'Home | Hire Me',
-        description: 'Home | Hire Ben Radler for software engineering. Ruby, Rails, Python, ReactJS, Javascript'
+- set_meta_tags title: 'Ben Radler | Street Photographer | Photography Gallery',
+        description: 'Photography Gallery | San Francisco Bay Area Street Photography'
 
 - content_for :page_title, 'Photography Gallery'
 - content_for :head do
