--- a/app/assets/stylesheets/base/_content.scss
+++ b/app/assets/stylesheets/base/_content.scss
@@ -105,8 +105,7 @@ article.post,
 .home-template .post-content :first-child .fluid-width-video-wrapper,
 .home-template .post-content>img:first-child,
 .home-template .post-content>.fluid-width-video-wrapper:first-child {
-  // TODO: why is this here? must be disabled for photoswipe
-  // display:none;
+   display:none;
 
   &.logo {
     display: flex;
