Show photo caption/description when opened in photoswipe

--- a/app/javascript/stylesheets/photography.sass
+++ b/app/javascript/stylesheets/photography.sass
@@ -16,6 +16,8 @@
   width: 33.2%
   img
     width: 100.5%
+  figcaption
+    display: none
 
 // reveal grid after images loaded, otherwise we may see images
 // stacked on top of each other for a moment as page loads
