--- a/app/javascript/stylesheets/photography.sass
+++ b/app/javascript/stylesheets/photography.sass
@@ -30,3 +30,41 @@
 
 .pswp__caption__center
   text-align: center
+
+
+.page-load-status
+  display: none // hidden by default
+  padding-top: 20px
+  padding-bottom: 10px
+  margin-top: 20px
+  border-top: 1px solid #DDD
+  text-align: center
+  color: #777
+
+.loader-wheel
+  text-align: center
+  margin: 0 auto
+  font-size: 64px
+  position: relative
+  height: 1em
+  width: 1em
+  padding-left: 0.45em
+  animation: loader-wheel-rotate 0.5s steps(12) infinite
+  overflow: hidden
+
+.loader-wheel i
+  display: block
+  position: absolute
+  height: 0.3em
+  width: 0.1em
+  border-radius: 0.05em
+  background: #333
+  opacity: 0.8
+  transform: rotate(-30deg)
+  transform-origin: center 0.5em
+
+@keyframes loader-wheel-rotate
+  from
+    transform: rotate(0deg)
+  to
+    transform: rotate(360deg)
