use data-turbolinks-trakc

--- a/app/views/photography/index.html.slim
+++ b/app/views/photography/index.html.slim
@@ -4,7 +4,7 @@
 - content_for :page_title, 'Photography Gallery'
 - content_for :head do
   = javascript_pack_tag 'photography', 'data-turbolinks-track': 'reload'
-  = stylesheet_pack_tag 'photography'
+  = stylesheet_pack_tag 'photography', 'data-turbolinks-track': 'reload'
 
 - # thumbnail gallery markup
 .my-gallery.grid.are-images-unloaded itemscope="" itemtype="http://schema.org/ImageGallery"
