--- a/app/views/shared/_header.html.slim
+++ b/app/views/shared/_header.html.slim
@@ -19,7 +19,7 @@ header class='sidebar-header'
         | Menu
       .collapse
         span class='icon collapse'
-        | Collapse
+        | Menu
     ul.main-menu
       li.menu-item = link_to 'home', root_path
       li.menu-item = link_to 'blog', blog_posts_path
