--- a/app/views/pages/home.html.slim
+++ b/app/views/pages/home.html.slim
@@ -8,9 +8,9 @@ article class='post' role='article' itemscope='' itemtype='http://schema.org/Art
     p Ben has over 12 years of professional experience as a Software Engineer at prestigious, successful companies in the San Francisco Bay Area.
     hr
     div.centered
-      = image_tag('logo-teespring.jpg', class: 'logo')
-      = image_tag('logo-lyft.png', class: 'logo')
-      = image_tag('logo-onelogin.png', class: 'logo')
+      = image_tag('logo-teespring.jpg', class: 'logo span-3')
+      = image_tag('logo-lyft.png', class: 'logo span-3')
+      = image_tag('logo-onelogin.png', class: 'logo span-3')
     hr
     p He's built an identity provider at Onelogin, an online store platform integrated with YouTube and Amazon at Teespring, and a Simulation Platform which scaled Lyft to thousands of rides per minute.
 
@@ -24,14 +24,16 @@ article class='post' role='article' itemscope='' itemtype='http://schema.org/Art
   div class='post-content' itemprop='articleBody'
     | He works with several popular programming languages and frameworks:
     ul
+      li Swift / iOS
       li Ruby / Ruby on Rails / Sinatra
       li Python / Django / Flask
       li Javascript / ReactJS
     hr
     div.centered
-      = image_tag('language-ruby.png', class: 'logo large', alt: 'Ruby', title: 'Ruby')
-      = image_tag('language-python.png', class: 'logo large', alt: 'Python', title: 'Python')
-      = image_tag('language-javascript.png', class: 'logo large', alt: 'Javascript', title: 'Javascript')
+      = image_tag('language-swift.png', class: 'logo large span-4', alt: 'Swift', title: 'Swift')
+      = image_tag('language-ruby.png', class: 'logo large span-4', alt: 'Ruby', title: 'Ruby')
+      = image_tag('language-python.png', class: 'logo large span-4', alt: 'Python', title: 'Python')
+      = image_tag('language-javascript.png', class: 'logo large span-4', alt: 'Javascript', title: 'Javascript')
 
 article class='post tag-format-quote' role='article' itemscope='' itemtype='http://schema.org/Article'
   div class='post-content' itemprop='articleBody'
