--- a/app/views/shared/_analytics.html.slim
+++ b/app/views/shared/_analytics.html.slim
@@ -1,11 +1,12 @@
-- # google analytics
+- # Global site tag (gtag.js) - Google Analytics
+script async="" src="https://www.googletagmanager.com/gtag/js?id=G-X5JZQX6X89"
 javascript:
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-  ga('create', 'UA-8287531-1', 'benradler.com');
-  ga('send', 'pageview');
+    window.dataLayer = window.dataLayer || [];
+    function gtag() {
+        dataLayer.push(arguments);
+    }
+    gtag('js', new Date());
+    gtag('config', 'G-X5JZQX6X89');
 
 - # heap.js
 javascript:
