--- a/app/assets/stylesheets/base/_header.scss
+++ b/app/assets/stylesheets/base/_header.scss
@@ -14,7 +14,7 @@
   }
 
   .first,
-  .second{
+  .second {
     @include clearfix;
     padding: 1px 0 0 0;
 
@@ -24,7 +24,7 @@
   @include transition(background 0.2s ease-in-out);
   @include span-columns(12);
   background: $color-1;
-  position: relative;
+  position: fixed;
   z-index: 1;
   -webkit-transform: translatez(0);
   -moz-transform: translatez(0);
@@ -33,13 +33,13 @@
   transform: translatez(0);
 
   @include media($medium) {
-    @include span-columns(4);
-    @include position(fixed, 0em 0 0em 0em);
+    // @include span-columns(4);
+    // @include position(fixed, 0em 0 0em 0em);
     font-size: $base-font-size * 0.8;
   }
 
   @include media($large) {
-    @include span-columns(4);
+    // @include span-columns(4);
     font-size: $base-font-size;
   }
 }
@@ -66,7 +66,7 @@
     @include rem(max-width, 26);
     width: 100%;
     margin: 2.85em 0;
-    float: right;
+    float: left;
   }
 }
 
@@ -119,7 +119,6 @@
   a {
     @include transition(background 0.2s ease-in-out);
     float: left;
-    speak: none;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     text-transform: none;
@@ -196,7 +195,7 @@ ul.main-menu {
   font-size: 1.5em;
 
   @include media($medium) {
-    @include rem(max-width, 26);
+    // @include rem(max-width, 26);
     width: 100%;
     height: auto;
     max-height: 5000px;
@@ -206,11 +205,16 @@ ul.main-menu {
     font-size: 2em;
     float: right;
     margin: 0;
+    text-align: center;
   }
 
   .menu-item {
     position: relative;
     overflow: hidden;
+    display: inline-block;
+    padding: 0 1em 0 1em;
+    margin: 0 0.25em 0 0.25em;
+    background-color: $color-2;
 
     @include media($medium) {
       @include animation(slide-in-menu .2s ease-in-out);
