--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -16,7 +16,7 @@ html lang='en'
     = yield :head
     = csrf_meta_tags
   body class="#{@body_class} font-sans bg-white h-screen flex flex-col w-full"
-    .site
+    .site class="h-screen bg-gradient-to-r from-green-400 to-blue-500"
       = render 'shared/header'
       section class='page-content primary' role='main'
         = render 'shared/flash'
