--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -1,8 +1,19 @@
+// @import "tailwindcss/base";
+// @import "tailwindcss/components";
+
+// // .btn {
+// //     @apply px-4 py-2 bg-blue-600 text-white rounded; 
+// // }
+
+// @import "tailwindcss/utilities";
+
+
+
 @import "tailwindcss/base";
 @import "tailwindcss/components";
 
-.btn {
-    @apply px-4 py-2 bg-blue-600 text-white rounded; 
+html {
+    @apply font-body antialiased;
 }
 
 @import "tailwindcss/utilities";
