--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -19,11 +19,10 @@
                 <div class="lg:pl-8 pt-8 sm:pt-10 lg:pt-0">
                     <h1
                         class="font-header text-white text-4xl sm:text-5xl md:text-6xl text-center sm:text-left">
-                        Hello I'm Christy Smith!</h1>
+                        Oh hai. I'm Ben Radler!</h1>
                     <div class="flex flex-col sm:flex-row justify-center lg:justify-start pt-3 sm:pt-5">
                         <div class="flex justify-center sm:justify-start items-center pl-0 md:pl-1">
-                            <p class="font-body text-white text-lg uppercase">Let's
-                                connect</p>
+                            <p class="font-body text-white text-lg uppercase">Find Me Here</p>
                             <div class="hidden sm:block">
                                 <i class='bx bx-chevron-right text-yellow text-3xl'></i>
                             </div>
