--- a/app/views/blog/posts/show.html.erb
+++ b/app/views/blog/posts/show.html.erb
@@ -5,25 +5,7 @@
     <div class="container py-6 md:py-10">
         <div class="max-w-4xl mx-auto">
             <% # meta %>
-            <div class="">
-                <h1 class="font-body font-semibold text-primary text-3xl sm:text-4xl md:text-5xl xl:text-6xl pt-5">
-                    <%= link_to @post.title, blog_posts_permalink_path(@post), rel: "bookmark" %>
-                </h1>
-                <div class="flex items-center pt-5 md:pt-10">
-                    <div>
-                        <%= image_tag @post.user.avatar_url, alt: "author image", class: "w-20 h-20 rounded-full shadow border-2 border-grey-70" %>
-                    </div>
-                    <div class="pl-5">
-                        <span class="font-body font-bold text-grey-10 text-xl block">
-                            <%= "By #{@post.author}" %>
-                        </span>
-                        <span class="font-body font-bold text-grey-30 text-xl block pt-1">
-                            <time datetime="<%= @post.created_at.to_formatted_s(:iso8601) %>" itemprop='datePublished' />
-                            <%= @post.created_at.strftime('%B %-d, %Y %l:%M%P') %>
-                        </span>
-                    </div>
-                </div>
-            </div>
+            <%= render partial: 'meta', locals: { post: @post } %>
 
             <% # post %>
             <div class="pt-8 prose max-w-none" itemprop="articleBody">
@@ -60,8 +42,6 @@
                 <% end %>
             </div>
 
-            <%= render 'shared/disqus_thread' %>
-
             <% # author information %>
             <div
                 class="border-t border-lila py-12 pt-12 xl:pb-20 flex flex-col md:flex-row items-center md:items-start">
@@ -95,6 +75,8 @@
                     </div>
                 </div>
             </div>
+
+            <%= render 'shared/disqus_thread' %>
         </div>
     </div>
 
