--- a/app/views/blog/posts/index.html.erb
+++ b/app/views/blog/posts/index.html.erb
@@ -20,7 +20,7 @@
           </div>
         </div>
       <% end %>
+
+      <%= paginate @posts, theme: 'tailwindcss' %>
     </div>
 </div>
-
-<%= paginate @posts, theme: 'bourbon' %>
