--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -26,6 +26,9 @@ html[lang="en"]
     
     - # this is ONLY for monokai page theme from asset pipeline
     = stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload'
+
+    - # staging/production require this
+    = stylesheet_pack_tag 'application'
     
     - # this is the webpack insertion point, including ALL tailwind CSS imported by application.js...so confusing
     = javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' 
