--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -42,4 +42,5 @@ html[lang="en"]
         = render 'shared/page'
       - else 
         = yield
-      = render 'shared/footer' 
+      = render 'shared/footer'
+    = render 'shared/analytics' if Rails.env.production?
