--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -1,32 +1,39 @@
 doctype html
 html[lang="en"]
   head
-    - # TODO: some meta tags may be redundant here
+    - # title and description
     = display_meta_tags
+
+    - # rss
     = auto_discovery_link_tag :rss, blog_posts_path(format: :rss)
     = auto_discovery_link_tag :atom, blog_posts_path(format: :atom)
     
+    - # content and device information
     meta[charset="utf-8"]
     meta[content="IE=edge,chrome=1" http-equiv="X-UA-Compatible"]
     meta[content="width=device-width, initial-scale=1, shrink-to-fit=no" name="viewport"]
+
+    - # facebook open graph
     meta[property="og:title" content="Homepage | Atom Template"]
     meta[property="og:locale" content="en_US"]
-    link[rel="canonical" href="//"]
     meta[property="og:url" content="//"]
-    link[rel="icon" type="image/png" href="/assets/favicon.png"]
-    meta[name="theme-color" content="#5540af"]
     meta[property="og:site_name" content="Atom Template"]
     meta[property="og:image" content="//assets/social.jpg"]
+
+    - # twitter
     meta[name="twitter:card" content="summary_large_image"]
     meta[name="twitter:site" content="@tailwindmade"]
+
+    link[rel="canonical" href="//"]
+    link[rel="icon" type="image/png" href="/assets/favicon.png"]
+    meta[name="theme-color" content="#5540af"]
+
+    - # fonts
     link[crossorigin="crossorigin" href="https://fonts.gstatic.com" rel="preconnect"]
     link[as="style" href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600&family=Raleway:wght@400;500;600;700&display=swap" rel="preload"]
     link[href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600&family=Raleway:wght@400;500;600;700&display=swap" rel="stylesheet"]
     link[href="https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css" rel="stylesheet"]
     
-    - # this is ONLY for monokai page theme from asset pipeline
-    = stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload'
-
     - # staging/production require this
     = stylesheet_pack_tag 'application'
     
