--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -9,6 +9,7 @@ this.triggerNavItem(id)
 }"> 
     <% # gross hack for different CSS class on home page "/" - can we use body_class instead? %>
     <% # body_class in pages_controller applies to all static pages %>
+    <% # desktop navigation %>
     <div class="w-full z-50 top-0 py-3 sm:py-5 <%= request.path == "/" ? "absolute" : "bg-primary" %> ">
         <div class="container flex justify-between items-center">
             <div>
@@ -16,87 +17,36 @@ this.triggerNavItem(id)
                     <img src="/assets/logo.svg" class="w-24 lg:w-48" alt="logo image">
                 </a>
             </div>
+
             <div class="hidden lg:block">
                 <ul class="flex items-center">
+                    <%= desktop_navigation_link(name: "photography", path: photography_path) %>
+                    <%= desktop_navigation_link(name: "blog",        path: blog_posts_path) %>
 
-                    <li class="group pl-6">
-                        <span
-                            class="font-header font-semibold text-white uppercase pt-0.5 cursor-pointer">
-                            <%= link_to 'photography', photography_path %>
-                        </span>
-
-                        <span class="block w-full h-0.5 bg-transparent group-hover:bg-yellow"></span>
-                    </li>
-
-
-                    <li class="group pl-6">
-                        <span @click="triggerNavItem('#about')"
-                            class="font-header font-semibold text-white uppercase pt-0.5 cursor-pointer">About</span>
-
-                        <span class="block w-full h-0.5 bg-transparent group-hover:bg-yellow"></span>
-                    </li>
-
-                    <li class="group pl-6">
-                        <span @click="triggerNavItem('#services')"
-                            class="font-header font-semibold text-white uppercase pt-0.5 cursor-pointer">Services</span>
-
-                        <span class="block w-full h-0.5 bg-transparent group-hover:bg-yellow"></span>
-                    </li>
-
-                    <li class="group pl-6">
-                        <span @click="triggerNavItem('#portfolio')"
-                            class="font-header font-semibold text-white uppercase pt-0.5 cursor-pointer">Portfolio</span>
-
-                        <span class="block w-full h-0.5 bg-transparent group-hover:bg-yellow"></span>
-                    </li>
-
-                    <li class="group pl-6">
-                        <span @click="triggerNavItem('#clients')"
-                            class="font-header font-semibold text-white uppercase pt-0.5 cursor-pointer">Clients</span>
-
-                        <span class="block w-full h-0.5 bg-transparent group-hover:bg-yellow"></span>
-                    </li>
-
-                    <li class="group pl-6">
-                        <span @click="triggerNavItem('#work')"
-                            class="font-header font-semibold text-white uppercase pt-0.5 cursor-pointer">Work</span>
-
-                        <span class="block w-full h-0.5 bg-transparent group-hover:bg-yellow"></span>
-                    </li>
-
-                    <li class="group pl-6">
-                        <span @click="triggerNavItem('#statistics')"
-                            class="font-header font-semibold text-white uppercase pt-0.5 cursor-pointer">Statistics</span>
-
-                        <span class="block w-full h-0.5 bg-transparent group-hover:bg-yellow"></span>
-                    </li>
-
-                    <li class="group pl-6">
-                        <span @click="triggerNavItem('#blog')"
-                            class="font-header font-semibold text-white uppercase pt-0.5 cursor-pointer">Blog</span>
-
-                        <span class="block w-full h-0.5 bg-transparent group-hover:bg-yellow"></span>
-                    </li>
-
-                    <li class="group pl-6">
-                        <span @click="triggerNavItem('#contact')"
-                            class="font-header font-semibold text-white uppercase pt-0.5 cursor-pointer">Contact</span>
-
-                        <span class="block w-full h-0.5 bg-transparent group-hover:bg-yellow"></span>
-                    </li>
-
+                    <%= scrolling_desktop_navigation_link(name: "about",      path: "#about",      request_path: request.path) %>
+                    <%= scrolling_desktop_navigation_link(name: "services",   path: "#services",   request_path: request.path) %>
+                    <%= scrolling_desktop_navigation_link(name: "portfolio",  path: "#portfolio",  request_path: request.path) %>
+                    <%= scrolling_desktop_navigation_link(name: "clients",    path: "#clients",    request_path: request.path) %>
+                    <%= scrolling_desktop_navigation_link(name: "work",       path: "#work",       request_path: request.path) %>
+                    <%= scrolling_desktop_navigation_link(name: "statistics", path: "#statistics", request_path: request.path) %>
+                    <%= scrolling_desktop_navigation_link(name: "blog",       path: "#blog",       request_path: request.path) %>
+                    <%= scrolling_desktop_navigation_link(name: "contact",    path: "#contact",    request_path: request.path) %>
                 </ul>
             </div>
+
+            <% # hamburger icon %>
             <div class="block lg:hidden">
                 <button @click="$parent.mobileMenu = true"><i class='bx bx-menu text-white text-4xl'></i></button>
             </div>
         </div>
     </div>
 
-
+    <% # mobile navigation %>
     <div class="fixed inset-0 bg-black bg-opacity-70 z-50 min-h-screen lg:hidden transition-opacity opacity-0 pointer-events-none"
         :class="{ 'opacity-100 pointer-events-auto': $parent.mobileMenu }">
         <div class="w-2/3 md:w-1/3 bg-primary min-h-screen absolute right-0 shadow py-4 px-8">
+
+            <% # close mobile nav %>
             <button class="absolute top-0 right-0 mt-4 mr-4" @click="$parent.mobileMenu = false">
                 <img src="/assets/icon-close.svg" class="h-10 w-auto" alt="">
             </button>
