--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -43,6 +43,7 @@
                             <a href="/" class="pl-4">
                                 <i class='bx bxl-instagram text-white hover:text-yellow text-2xl'></i>
                             </a>
+                            <i class="text-white hover:text-yellow text-2xl northemes-icons text-white">o</i>
                         </div>
                     </div>
                 </div>
