--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -42,7 +42,7 @@ html[lang="en"]
     
     = yield :head 
     = csrf_meta_tags
-  body[:class="{ 'overflow-hidden max-h-screen': mobileMenu }" x-data="{ mobileMenu: false }"]
+  body[class="#{@body_class}" :class="{ 'overflow-hidden max-h-screen': mobileMenu }" x-data="{ mobileMenu: false }"]
     #main
       = render 'shared/header'
       - if controller_name =~ /pages|errors/
