--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -13,6 +13,10 @@ html[lang="en"]
     meta[content="IE=edge,chrome=1" http-equiv="X-UA-Compatible"]
     meta[content="width=device-width, initial-scale=1, shrink-to-fit=no" name="viewport"]
 
+    - # TODO: are these 2 tags required/needed? esp. check photography page without them
+    meta name='HandheldFriendly' content='True'
+    meta name='MobileOptimized' content='320'
+
     - # facebook open graph
     meta[property="og:title" content="Homepage | Atom Template"]
     meta[property="og:locale" content="en_US"]
